# WavFakeCleanerV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  login.py  manifest.json  package-lock.json  package.json  popup.html  pyproject.toml  requirements.txt  setup.bat  setup.sh  sidepanel.html  start.bat  start.sh  stripe-verify-worker.js  tsconfig.json  vite.config.ts  wrangler.jsonc
alembic/: env.py
alembic/versions/: 001_add_saas_models.py
backend/: main.py
backend/api/: auth.py  billing.py  emails.py  quota.py  routes.py  saas_routes.py  websocket.py
backend/core/: config.py  logger.py
backend/database/: models.py  session.py
backend/engine/: browser_manager.py  cleaner.py  fetcher.py  pacer.py  pipeline.py  rate_tracker.py  scorer.py  selectors.yaml
extension/: build.js  manifest.firefox.json  manifest.json
extension/background/: pacer.js  quota.js  scorer.js  service-worker.js
extension/content/: threads.js
extension/popup/: app.js  index.html  styles.css
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
landing/: billing-cancel.html  billing-success.html  index.html
src/background/: keepalive.ts  pacer.ts  pipeline.ts  rate-tracker.ts  scorer.ts  service-worker.ts  storage.ts
src/content/: api-interceptor.ts  licence-activator.ts  main-world-bridge.ts  main.ts  threads-actions.ts  threads-scraper.ts
src/offscreen/: offscreen.html  offscreen.ts
src/popup/: popup.tsx
src/shared/: constants.ts  types.ts  (+2 more)
tests/: test_auth.py  test_quota.py  test_scorer.js  test_scorer.py
(+23 files in other folders)
