[project]
name = "wav-fake-cleaner-v2"
version = "2.0.0"
description = "Threads fake follower cleaner – async scraping engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
